# Server

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  api_config.yaml  deployment.yaml  index.js  nodemon.json  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  secret-key  tsconfig.json
grpc/: Cargo.toml
proto/: products.proto  webhooks.proto
src/: allergens.ts  env.d.ts  global.d.ts  index.ts
src/config/: firebase.ts  server-cert.osx.pem  server-cert.windows.pem  server-key.osx.pem  server-key.windows.pem  stripe.ts
src/data/: drinks.ts
src/middleware/: passport.ts  user.ts
src/routes/: auth.ts  buy.ts  index.ts  me.ts  products.ts  products.types.ts  user.ts  webauthn.ts  webauthn_demo.ts  webhooks.ts
src/utils/: Logger.ts  bytes.ts  consts.ts  helpers.ts  passthrough-counter.ts  webauthn-utils.ts
