[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.9"
tokio = { version = "1.16.1", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.6.2", features = ["tls", "compression"] }
tower = { version = "0.4" }
# Required for wellknown types
prost-types = "0.9"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"]}